--- a/app/stylesheets/map.sass
+++ b/app/stylesheets/map.sass
@@ -22,6 +22,12 @@
   padding: 2px
   color: white
   z-index: 2147483647
+
+.olControlBoundingBox 
+  background-color: #333
+  padding: 2px
+  color: white
+  z-index: 2147483647
   
 #projected_coords
   float: right
@@ -31,3 +37,12 @@
   font-size: 0.8em
 
 
+#statusbar
+  .current_bounds
+    border-bottom: 1px #ccc dashed
+    margin-top: 5px
+    margin-right: 10px
+    padding: 5px 0 15px
+    font-size: 10px
+    letter-spacing: .25em
+    text-transform: uppercase
