--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -137,6 +137,9 @@ body.two-col
     margin-top: 5px
     margin-right: 10px
     padding: 5px 0 15px
+    font-size: 10px
+    letter-spacing: .25em
+    text-transform: uppercase
     h3
       font-size: 10px
       letter-spacing: .25em
