--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -6,4 +6,8 @@
 
 .olControlMousePosition { background-color: #333333; padding: 2px; color: white; z-index: 2147483647; }
 
+.olControlBoundingBox { background-color: #333333; padding: 2px; color: white; z-index: 2147483647; }
+
 #projected_coords { float: right; padding: 2px; background-color: wheat; bottom: -20px; font-size: 0.8em; }
+
+#statusbar .current_bounds { border-bottom: 1px #cccccc dashed; margin-top: 5px; margin-right: 10px; padding: 5px 0 15px; font-size: 10px; letter-spacing: 0.25em; text-transform: uppercase; }
