centered the text

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -66,6 +66,8 @@ body.bp
     width: 920px
     padding: 20px 25px 0 25px
     background: url(/images/pagehead/background-white.png) 0 0 no-repeat
+    text-align: center
+    font-weight: bold
 
   .container
     +container
