--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -6,7 +6,7 @@
 
 .pagehead
   %p
-    Select the hazard and the exposure maps to compute map of estimated fatalities.
+    Select the hazard and the exposure maps to compute map of estimated fatalities
 
 .container  
   #builder
