changed page head font and centred

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -67,7 +67,10 @@ body.bp
     padding: 20px 25px 0 25px
     background: url(/images/pagehead/background-white.png) 0 0 no-repeat
     text-align: center
-    font-weight: bold
+    font-weight: light
+    font-size: 14px
+    letter-spacing: .20em
+    text-transform: uppercase
 
   .container
     +container
