--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,10 +18,10 @@
 
     / install uniform for nicer forms
     = javascript_include_tag "highcharts"
-    = javascript_include_tag 'jquery.uniform.min'
     = javascript_include_tag 'json2'
     = javascript_include_tag 'inflection'
-    = javascript_include_tag 'https://getfirebug.com/firebug-lite.js'
+    = javascript_include_tag 'jquery.base64'
+    / = javascript_include_tag 'https://getfirebug.com/firebug-lite.js'
     = stylesheet_link_tag '/javascripts/css/uniform.default.css'
 
     / setup websocket includes
